--- a/languages/mini.po
+++ b/languages/mini.po
@@ -1,5 +1,3 @@
-# Copyright (C) 2025 Giacomo Rizzotti
-# This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
 "Project-Id-Version: mini 1.1.5\n"
@@ -9,8 +7,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2025-05-14T20:34:20+00:00\n"
+"POT-Creation-Date: 2025-05-14T20:26:04+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Language: \n"
 "X-Generator: WP-CLI 2.12.0\n"
 "X-Domain: mini\n"
 
@@ -57,25 +56,13 @@ msgstr ""
 msgid "Try looking in the monthly archives. %1$s"
 msgstr ""
 
-#: archive-event.php:25
-msgid "Events"
-msgstr ""
-
 #: archive-event.php:52
 #: archive-match.php:52
 #: archive-news.php:65
 #: single-event.php:54
 #: single-news.php:50
 msgid "Monthly archive"
-msgstr ""
-
-#: archive-match.php:25
-msgid "Matches"
-msgstr ""
-
-#: archive-news.php:31
-msgid "News"
-msgstr ""
+msgstr "Archivio mensile"
 
 #. translators: 1: title.
 #: comments.php:37
@@ -728,22 +715,22 @@ msgstr ""
 #: single-news.php:32
 #: single.php:76
 msgid "Previous:"
-msgstr ""
+msgstr "Precedente"
 
 #: single-event.php:37
 #: single-match.php:86
 #: single-news.php:33
 #: single.php:77
 msgid "Next:"
-msgstr ""
+msgstr "Successivo"
 
 #: template-parts/content-event.php:103
 msgid "Time"
-msgstr ""
+msgstr "Ora"
 
 #: template-parts/content-event.php:114
 msgid "End"
-msgstr ""
+msgstr "Fine"
 
 #. translators: %s: Name of current post. Only visible to screen readers
 #: template-parts/content-event.php:152
@@ -760,17 +747,17 @@ msgstr ""
 #: template-parts/content-page.php:45
 #: template-parts/content.php:79
 msgid "Pages:"
-msgstr ""
+msgstr "Pagine:"
 
 #: template-parts/content-event.php:173
 #: template-parts/content-match.php:185
 #: template-parts/content-news.php:77
 msgid "Read more"
-msgstr ""
+msgstr "Leggi di più"
 
 #: template-parts/content-none.php:18
 msgid "Nothing Found"
-msgstr ""
+msgstr "Nessun contenuto"
 
 #. translators: 1: link to WP admin new post page.
 #: template-parts/content-none.php:28
@@ -785,3 +772,15 @@ msgstr ""
 #: template-parts/content-none.php:48
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
 msgstr ""
+
+#: archive-event.php:25
+msgid "Events"
+msgstr "Eventi"
+
+#: archive-match.php:25
+msgid "Matches"
+msgstr "Partite"
+
+#: archive-news.php:31
+msgid "News"
+msgstr "Notizie"
